--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ body{
     max-width: 1200px;
     margin: 0 auto;
     flex-wrap: wrap;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .product{
@@ -75,24 +77,15 @@ body{
     width: 24%;
     padding: 5px;
     margin: 20px 0;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 img{
-
-    width: 100%;
-    height: 100%;   
+    width: 250px;
+    height: 250px;
     object-fit: contain;
-}
-
-p .product-description{
-    font-size: 16px;
-}
-
-p .product-price{
-    font-size: 16px;
     
-}
+}    
 
 button{
     padding: 15px 50px;
@@ -102,15 +95,11 @@ button{
     font-size: 16px;
     color: #ffffff;
     background-color: #4C6EF5;
+    justify-content: center;
 }
 
 button:hover{
     background-color: #2c53ef;
 }
 
-.product-img{
-    width: 250px;
-    height: 250px;
-    
-}
 
