--- a/Css/style.css
+++ b/Css/style.css
@@ -59,11 +59,14 @@ body{
 }
 
 .product-cards{
+    display: flex;
     background-color: rgba(0, 0, 0, 0.104);
+    box-sizing: border-box;
 }
 
 .product-flex{
     display: flex;
+    justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
     flex-wrap: wrap;
@@ -73,15 +76,15 @@ body{
 
 .product{
     display: flex;
-    flex-direction: column;
-    width: 24%;
-    padding: 5px;
-    margin: 20px 0;
     justify-content: space-between;
+    flex-direction: column;
+    margin-bottom: 16px;
+    width: 24%;
+    background-color: #FFFFFF;
 }
 
 img{
-    width: 300px;
+    width: 100%;
     height: 250px;
     object-fit: contain;
 }    
